header 可配置的内容

--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -3,7 +3,14 @@
 @tailwind utilities;
 
 @layer base {
+    :root{
+        --ft1:'Product Sans, Arial, sans-serif';
+        --ft2:'Product Sans, Arial, sans-serif';
+        --ft3:'Product Sans, Arial, sans-serif';
+    }
+
 }
 
 @layer components {
+    #header:not(.stickyHeader){@apply bg-transparent absolute w-full border-none}
 }
