Revert "字体绝对路径"
This reverts commit 22ca8f1ac873c0742444fdb3b6d72279628942af.

--- a/snippets/external-fonts.liquid
+++ b/snippets/external-fonts.liquid
@@ -5,37 +5,37 @@
 font-family: 'Product Sans';
 font-style: normal;
 font-weight: 400;
-src: url('https://cdn.shopify.com/s/files/1/0730/5792/7483/files/ProductSans-Light.ttf?v=1684401059') format('ttf'),
-        url('https://cdn.shopify.com/s/files/1/0730/5792/7483/files/ProductSans-Light.woff?v=1684401059') format('woff');
+src: url('{{ 'ProductSans-Light.ttf' | asset_url }}') format('ttf'),
+        url('{{ 'ProductSans-Light.woff' | asset_url }}') format('woff');
 }
 @font-face {
 font-family: 'Product Sans';
 font-style: normal;
 font-weight: 500;
-src: url('https://cdn.shopify.com/s/files/1/0730/5792/7483/files/Product-Sans-Regular-2.ttf?v=1684401059') format('ttf'),
-        url('https://cdn.shopify.com/s/files/1/0730/5792/7483/files/Product-Sans-Regular-2.woff?v=1684401059') format('woff');
+src: url('{{ 'Product-Sans-Regular-2.ttf' | asset_url }}') format('ttf'),
+        url('{{ 'Product-Sans-Regular-2.woff' | asset_url }}') format('woff');
 }
 @font-face {
 font-family: 'Product Sans';
 font-style: normal;
 font-weight: 600;
-src: url('https://cdn.shopify.com/s/files/1/0730/5792/7483/files/Product-Sans-Bold-3.ttf?v=1684401059') format('ttf'),
-        url('https://cdn.shopify.com/s/files/1/0730/5792/7483/files/Product-Sans-Bold-3.woff?v=1684401058') format('woff');
+src: url('{{ 'Product-Sans-Bold-3.ttf' | asset_url }}') format('ttf'),
+        url('{{ 'Product-Sans-Bold-3.woff' | asset_url }}') format('woff');
 }
 
 @font-face {
 font-family: 'Product Sans';
 font-style: italic;
 font-weight: 500;
-src: url('https://cdn.shopify.com/s/files/1/0730/5792/7483/files/Product-Sans-Italic-4.ttf?v=1684401059') format('ttf'),
-        url('https://cdn.shopify.com/s/files/1/0730/5792/7483/files/Product-Sans-Italic-4.woff?v=1684401059') format('woff');
+src: url('{{ 'Product-Sans-Italic-2.ttf' | asset_url }}') format('ttf'),
+        url('{{ 'Product-Sans-Italic-2.woff' | asset_url }}') format('woff');
 }
 @font-face {
 font-family: 'Product Sans';
 font-style: italic;
 font-weight: 600;
-src: url('https://cdn.shopify.com/s/files/1/0730/5792/7483/files/Product-Sans-Bold-Italic-5.ttf?v=1684401059') format('ttf'),
-        url('https://cdn.shopify.com/s/files/1/0730/5792/7483/files/Product-Sans-Bold-Italic-5.woff?v=1684401059') format('woff');
+src: url('{{ 'Product-Sans-Bold-Italic-5.ttf' | asset_url }}') format('ttf'),
+        url('{{ 'Product-Sans-Bold-Italic-5.woff' | asset_url }}') format('woff');
 }
 
 {% endstyle %}
