--- a/snippets/external-fonts.liquid
+++ b/snippets/external-fonts.liquid
@@ -5,37 +5,32 @@
 font-family: 'Product Sans';
 font-style: normal;
 font-weight: 400;
-src: url('{{ 'ProductSans-Light.ttf' | asset_url }}') format('ttf'),
-        url('{{ 'ProductSans-Light.woff' | asset_url }}') format('woff');
+src: url('{{ 'Product-Sans-Light.woff' | asset_url }}') format('woff');
 }
 @font-face {
 font-family: 'Product Sans';
 font-style: normal;
 font-weight: 500;
-src: url('{{ 'Product-Sans-Regular-2.ttf' | asset_url }}') format('ttf'),
-        url('{{ 'Product-Sans-Regular-2.woff' | asset_url }}') format('woff');
+src: url('{{ 'Product-Sans-Regular-2.woff' | asset_url }}') format('woff');
 }
 @font-face {
 font-family: 'Product Sans';
 font-style: normal;
 font-weight: 600;
-src: url('{{ 'Product-Sans-Bold-3.ttf' | asset_url }}') format('ttf'),
-        url('{{ 'Product-Sans-Bold-3.woff' | asset_url }}') format('woff');
+src: url('{{ 'Product-Sans-Bold-3.woff' | asset_url }}') format('woff');
 }
 
 @font-face {
 font-family: 'Product Sans';
 font-style: italic;
 font-weight: 500;
-src: url('{{ 'Product-Sans-Italic-2.ttf' | asset_url }}') format('ttf'),
-        url('{{ 'Product-Sans-Italic-2.woff' | asset_url }}') format('woff');
+src: url('{{ 'Product-Sans-Italic-2.woff' | asset_url }}') format('woff');
 }
 @font-face {
 font-family: 'Product Sans';
 font-style: italic;
 font-weight: 600;
-src: url('{{ 'Product-Sans-Bold-Italic-5.ttf' | asset_url }}') format('ttf'),
-        url('{{ 'Product-Sans-Bold-Italic-5.woff' | asset_url }}') format('woff');
+src: url('{{ 'Product-Sans-Bold-Italic-5.woff' | asset_url }}') format('woff');
 }
 
 {% endstyle %}
