--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -99,7 +99,7 @@
                         {%- endcapture -%}
                         <div class="ss_txt-wrap w_100 h_100" {% if secSt.isbox or secSt.isboxm %} style="--ibg:{{ secSt.obg | color_modify: 'alpha', secSt.oopt }};--brad:{{secSt.brad}}px;"{% endif %}>
                             <div class="page-width fl h_100 {{ blkSt.txtpos }} {{ blkSt.txtposm }}" style="max-width:{{blkSt.contwd}}px;{{bxStyle}}">
-                                <div class="ss_txt{% if blkSt.text-left %} tl{% else %} tc{% endif %}{% if section.settings.txtanimation %} anim {{ section.settings.anim }}{% endif %}">
+                                <div class="ss_txt mb-7 {% if blkSt.text-left %} tl{% else %} tc{% endif %}{% if section.settings.txtanimation %} anim {{ section.settings.anim }}{% endif %}">
                                     {% if blkSt.hd1 != blank %}
                                         <p class="stxt hd1 {{secSt.pff}}" style="--cl:{{blkSt.pcl}};--fs:{{secSt.pfs}}px;--fsm:{{secSt.pfsm}}px;--fw:{{secSt.pfw}};--lh:{{secSt.plh}};--mb:{{secSt.pmb}}px;--mbm:{{secSt.pmbm}}px">{{ blkSt.hd1 }}</p>
                                     {% endif %}
@@ -117,7 +117,11 @@
                                     {% elsif block.type == 'video' %}
                                         {% if blkSt.btn != blank %}<div class="btnWrap"><a class="btn {{secSt.btn-sizem}} {{secSt.btn-size}} {{blkSt.btn-style}}" href="{{ blkSt.link }}">{{blkSt.btn}}</a></div>{% endif %}
                                     {% else %}
-                                        {% if blkSt.btn != blank %}<div class="btnWrap"><span class="btn {{secSt.btn-sizem}} {{secSt.btn-size}} {{blkSt.btn-style}}" >{{blkSt.btn}}</span></div>{% endif %}
+                                        {% if blkSt.btn != blank %}
+                                        <div class="btnWrap mt-14">
+                                            <span class="btn btn-featured !text-lg !py-3 !px-7 {{secSt.btn-sizem}} {{secSt.btn-size}} {{blkSt.btn-style}}" >{{blkSt.btn}}</span>
+                                        </div>
+                                        {% endif %}
                                     {% endif %}            
                                 </div>
                             </div>
