--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,3 +1,19 @@
+/* 动态生成的类名 */
+
+[section-name = 'products-slider-full'] .flickity-slider .is-selected{
+  opacity:1;
+}
+
+[section-name = 'products-slider-full'] .flickity-slider .is-selected [tag-name = 'product-info']{
+  opacity:1;
+}
+
+[section-name = 'products-slider-full'] .flickity-slider .is-selected [tag-name = 'product-img']{
+  --tw-scale-x:1;
+  --tw-scale-y:1;
+  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 :root{
   --ft1:'Product Sans';
   --ft2:'Product Sans';
@@ -189,8 +205,56 @@
   position:relative;
 }
 
+.left-1\/2{
+  left:50%;
+}
+
+.left-4{
+  left:1rem;
+}
+
+.top-4{
+  top:1rem;
+}
+
+.top-8{
+  top:2rem;
+}
+
+.right-4{
+  right:1rem;
+}
+
+.z-10{
+  z-index:10;
+}
+
+.z-20{
+  z-index:20;
+}
+
+.mb-1{
+  margin-bottom:0.25rem;
+}
+
+.mb-12{
+  margin-bottom:3rem;
+}
+
+.mb-13{
+  margin-bottom:3.25rem;
+}
+
 .mb-7{
   margin-bottom:1.75rem;
+}
+
+.ml-4{
+  margin-left:1rem;
+}
+
+.mr-4{
+  margin-right:1rem;
 }
 
 .mt-14{
@@ -225,12 +289,39 @@
   display:none;
 }
 
+.h-1\/2{
+  height:50%;
+}
+
+.w-1\/2{
+  width:50%;
+}
+
+.w-full{
+  width:100%;
+}
+
+.-translate-x-1\/2{
+  --tw-translate-x:-50%;
+  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-90{
+  --tw-scale-x:.9;
+  --tw-scale-y:.9;
+  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform{
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .resize{
   resize:both;
+}
+
+.items-center{
+  align-items:center;
 }
 
 .truncate{
@@ -243,14 +334,27 @@
   border-radius:0.25rem;
 }
 
-.py-3{
-  padding-top:0.75rem;
-  padding-bottom:0.75rem;
+.rounded-full{
+  border-radius:9999px;
 }
 
-.\!py-3{
-  padding-top:0.75rem !important;
-  padding-bottom:0.75rem !important;
+.bg-gradient-to-b{
+  background-image:linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.from-white{
+  --tw-gradient-from:#fff var(--tw-gradient-from-position);
+  --tw-gradient-to:rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops:var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-white{
+  --tw-gradient-to:rgb(255 255 255 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops:var(--tw-gradient-from), #fff var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.to-transparent{
+  --tw-gradient-to:transparent var(--tw-gradient-to-position);
 }
 
 .\!px-7{
@@ -258,13 +362,65 @@
   padding-right:1.75rem !important;
 }
 
+.\!py-3{
+  padding-top:0.75rem !important;
+  padding-bottom:0.75rem !important;
+}
+
+.px-5{
+  padding-left:1.25rem;
+  padding-right:1.25rem;
+}
+
+.py-1{
+  padding-top:0.25rem;
+  padding-bottom:0.25rem;
+}
+
+.pt-18{
+  padding-top:4.5rem;
+}
+
 .text-left{
   text-align:left;
+}
+
+.text-center{
+  text-align:center;
 }
 
 .\!text-lg{
   font-size:1.125rem !important;
   line-height:1.75rem !important;
+}
+
+.text-1_5xl{
+  font-size:1.375rem;
+  line-height:1.875rem;
+}
+
+.text-3_5xl{
+  font-size:2rem;
+  line-height:2.5rem;
+}
+
+.text-4_5xl{
+  font-size:2.5rem;
+  line-height:3rem;
+}
+
+.text-base{
+  font-size:1rem;
+  line-height:1.5rem;
+}
+
+.text-xl{
+  font-size:1.25rem;
+  line-height:1.75rem;
+}
+
+.font-medium{
+  font-weight:500;
 }
 
 .capitalize{
@@ -275,6 +431,23 @@
   font-style:italic;
 }
 
+.text-black-600{
+  --tw-text-opacity:1;
+  color:rgb(102 102 102 / var(--tw-text-opacity));
+}
+
+.opacity-0{
+  opacity:0;
+}
+
+.opacity-30{
+  opacity:0.3;
+}
+
+.opacity-60{
+  opacity:0.6;
+}
+
 .outline{
   outline-style:solid;
 }
@@ -283,6 +456,44 @@
   filter:var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.transition-all{
+  transition-property:all;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration:150ms;
+}
+
+.transition-opacity{
+  transition-property:opacity;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration:150ms;
+}
+
+.delay-300{
+  transition-delay:300ms;
+}
+
+.delay-700{
+  transition-delay:700ms;
+}
+
+.duration-300{
+  transition-duration:300ms;
+}
+
+.duration-700{
+  transition-duration:700ms;
+}
+
 .ease-in-out{
   transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (min-width: 1024px){
+  .lg\:h-\[33vw\]{
+    height:33vw;
+  }
+
+  .lg\:w-\[33vw\]{
+    width:33vw;
+  }
 }
