--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -4,6 +4,10 @@
 [section-name = 'products-slider-full'] .flickity-slider .is-selected [tag-name = 'product-info']{@apply opacity-100}
 [section-name = 'products-slider-full'] .flickity-slider .is-selected [tag-name = 'product-img']{@apply scale-100}
 
+[section-name = 'logo-slider'] .flickity-slider .is-selected img{@apply grayscale-0 scale-100}
+[section-name = 'logo-slider'] .flickity-enabled.is-fade .flickity-slider>*{@apply duration-150 ease-linear}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
