--- a/assets/custom.css
+++ b/assets/custom.css
@@ -14,6 +14,19 @@
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+[section-name = 'logo-slider'] .flickity-slider .is-selected img{
+  --tw-scale-x:1;
+  --tw-scale-y:1;
+  transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-grayscale:grayscale(0);
+  filter:var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+[section-name = 'logo-slider'] .flickity-enabled.is-fade .flickity-slider>*{
+  transition-duration:150ms;
+  transition-timing-function:linear;
+}
+
 :root{
   --ft1:'Product Sans';
   --ft2:'Product Sans';
@@ -213,6 +226,10 @@
   left:1rem;
 }
 
+.right-4{
+  right:1rem;
+}
+
 .top-4{
   top:1rem;
 }
@@ -221,20 +238,25 @@
   top:2rem;
 }
 
-.right-4{
-  right:1rem;
-}
-
-.z-10{
-  z-index:10;
-}
-
 .z-20{
   z-index:20;
 }
 
+.mx-auto{
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.mb-0{
+  margin-bottom:0px;
+}
+
 .mb-1{
   margin-bottom:0.25rem;
+}
+
+.mb-10{
+  margin-bottom:2.5rem;
 }
 
 .mb-12{
@@ -245,8 +267,24 @@
   margin-bottom:3.25rem;
 }
 
+.mb-20{
+  margin-bottom:5rem;
+}
+
+.mb-4{
+  margin-bottom:1rem;
+}
+
 .mb-7{
   margin-bottom:1.75rem;
+}
+
+.mb-8{
+  margin-bottom:2rem;
+}
+
+.ml-2{
+  margin-left:0.5rem;
 }
 
 .ml-4{
@@ -255,6 +293,10 @@
 
 .mr-4{
   margin-right:1rem;
+}
+
+.mt-10{
+  margin-top:2.5rem;
 }
 
 .mt-14{
@@ -293,8 +335,28 @@
   height:50%;
 }
 
+.h-full{
+  height:100%;
+}
+
 .w-1\/2{
   width:50%;
+}
+
+.w-1\/5{
+  width:20%;
+}
+
+.w-3\/5{
+  width:60%;
+}
+
+.w-\[38\%\]{
+  width:38%;
+}
+
+.w-\[62\%\]{
+  width:62%;
 }
 
 .w-full{
@@ -316,12 +378,28 @@
   transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.cursor-pointer{
+  cursor:pointer;
+}
+
 .resize{
   resize:both;
 }
 
+.flex-wrap{
+  flex-wrap:wrap;
+}
+
+.items-end{
+  align-items:flex-end;
+}
+
 .items-center{
   align-items:center;
+}
+
+.justify-between{
+  justify-content:space-between;
 }
 
 .truncate{
@@ -336,6 +414,36 @@
 
 .rounded-full{
   border-radius:9999px;
+}
+
+.rounded-section{
+  border-radius:3rem;
+}
+
+.border-0{
+  border-width:0px;
+}
+
+.border-b-2{
+  border-bottom-width:2px;
+}
+
+.border-l-\[\.5rem\]{
+  border-left-width:.5rem;
+}
+
+.border-solid{
+  border-style:solid;
+}
+
+.border-black-300{
+  --tw-border-opacity:1;
+  border-color:rgb(204 204 204 / var(--tw-border-opacity));
+}
+
+.border-white{
+  --tw-border-opacity:1;
+  border-color:rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-gradient-to-b{
@@ -357,6 +465,15 @@
   --tw-gradient-to:transparent var(--tw-gradient-to-position);
 }
 
+.bg-no-repeat{
+  background-repeat:no-repeat;
+}
+
+.object-cover{
+  -o-object-fit:cover;
+     object-fit:cover;
+}
+
 .\!px-7{
   padding-left:1.75rem !important;
   padding-right:1.75rem !important;
@@ -365,6 +482,16 @@
 .\!py-3{
   padding-top:0.75rem !important;
   padding-bottom:0.75rem !important;
+}
+
+.px-12{
+  padding-left:3rem;
+  padding-right:3rem;
+}
+
+.px-4{
+  padding-left:1rem;
+  padding-right:1rem;
 }
 
 .px-5{
@@ -377,8 +504,61 @@
   padding-bottom:0.25rem;
 }
 
+.py-20{
+  padding-top:5rem;
+  padding-bottom:5rem;
+}
+
+.pb-0{
+  padding-bottom:0px;
+}
+
+.pb-18{
+  padding-bottom:4.5rem;
+}
+
+.pb-2{
+  padding-bottom:0.5rem;
+}
+
+.pb-24{
+  padding-bottom:6rem;
+}
+
+.pb-6{
+  padding-bottom:1.5rem;
+}
+
+.pb-9{
+  padding-bottom:2.25rem;
+}
+
+.pt-0{
+  padding-top:0px;
+}
+
+.pt-12{
+  padding-top:3rem;
+}
+
 .pt-18{
   padding-top:4.5rem;
+}
+
+.pt-2{
+  padding-top:0.5rem;
+}
+
+.pt-24{
+  padding-top:6rem;
+}
+
+.pt-6{
+  padding-top:1.5rem;
+}
+
+.pt-9{
+  padding-top:2.25rem;
 }
 
 .text-left{
@@ -404,9 +584,27 @@
   line-height:2.5rem;
 }
 
+.text-3xl{
+  font-size:1.875rem;
+  line-height:2.25rem;
+}
+
 .text-4_5xl{
   font-size:2.5rem;
   line-height:3rem;
+}
+
+.text-4xl{
+  font-size:2.25rem;
+  line-height:2.5rem;
+}
+
+.text-\[1\.25rem\]{
+  font-size:1.25rem;
+}
+
+.text-\[2\.625rem\]{
+  font-size:2.625rem;
 }
 
 .text-base{
@@ -414,9 +612,18 @@
   line-height:1.5rem;
 }
 
+.text-lg{
+  font-size:1.125rem;
+  line-height:1.75rem;
+}
+
 .text-xl{
   font-size:1.25rem;
   line-height:1.75rem;
+}
+
+.font-bold{
+  font-weight:700;
 }
 
 .font-medium{
@@ -436,6 +643,11 @@
   color:rgb(102 102 102 / var(--tw-text-opacity));
 }
 
+.text-white{
+  --tw-text-opacity:1;
+  color:rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .opacity-0{
   opacity:0;
 }
@@ -450,6 +662,11 @@
 
 .outline{
   outline-style:solid;
+}
+
+.grayscale{
+  --tw-grayscale:grayscale(100%);
+  filter:var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .filter{
@@ -486,6 +703,42 @@
 
 .ease-in-out{
   transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.after\:absolute::after{
+  content:var(--tw-content);
+  position:absolute;
+}
+
+.after\:-bottom-\[2px\]::after{
+  content:var(--tw-content);
+  bottom:-2px;
+}
+
+.after\:block::after{
+  content:var(--tw-content);
+  display:block;
+}
+
+.after\:h-\[2px\]::after{
+  content:var(--tw-content);
+  height:2px;
+}
+
+.after\:w-1\/4::after{
+  content:var(--tw-content);
+  width:25%;
+}
+
+.after\:bg-black-900::after{
+  content:var(--tw-content);
+  --tw-bg-opacity:1;
+  background-color:rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.after\:content-\[\'\'\]::after{
+  --tw-content:'';
+  content:var(--tw-content);
 }
 
 @media (min-width: 1024px){
