--- a/sections/products-slider-full.liquid
+++ b/sections/products-slider-full.liquid
@@ -1,6 +1,6 @@
 {%- assign secSt = section.settings -%}
 
-<section section-name="products-slider-full" class="pt-18 relative" style="background-image: linear-gradient({{secSt.bg_color}}, #fff);">
+<section section-name="products-slider-full" class="{% render 'section-interva-set' , secSt:secSt %}" style="background-image: linear-gradient({{secSt.bg_color}}, #fff);">
   <div class="page-width text-center mb-13">
     <h1 class="text-4_5xl">{{section.settings.title}}</h1> 
   </div>
@@ -8,7 +8,7 @@
   <div class="relative">
     <div class="absolute opacity-60 top-8 left-1/2 -translate-x-1/2 lg:w-[33vw] lg:h-[33vw] w-1/2 h-1/2 rounded-full shadow-[0px -10px 5px 3px #ededed] bg-gradient-to-b via-white from-white to-transparent"></div>
     <div class="relative" 
-    data-flickity='{"wrapAround": "true" , "arrowShape":"M 10,50 L 20,50 L 20,0 L 30,0 Z"}'>
+    data-flickity='{"wrapAround": "true" }'>
       {% for block in section.blocks %}
       <div class="page-width mr-4 opacity-30 transition-opacity duration-700 delay-300" >
         {%- assign product = block.settings.product -%}
@@ -22,8 +22,13 @@
               <p class="text-xl ml-4 font-medium">{{ product.price | money}}</p>
             </div>
           </div>
-          
-          <div class="absolute right-4 top-4"> {{ block.settings.tags_image | image_url: width: 90 | image_tag: loading: 'lazy' }} </div>
+          {% if block.settings.tags_image != blank %}
+
+
+            <div class="absolute right-4 top-4">
+              <img src="{{ block.settings.tags_image | image_url: master }}">
+            </div>
+          {% endif %}
 
         </div>
           {% if block.settings.product_image %}
@@ -40,12 +45,75 @@
   </div>
 </section>  
 
-
 {% schema %}
   {
     "name": "Full screen slider v2",
     "tag": "section",
     "settings": [	
+      {
+        "type": "header",
+        "content": "Section interval set"
+      },
+      {
+        "type": "select",
+        "id": "top_padding",
+        "label": "top interval",
+        "default": "large",
+        "options": [
+          {
+            "value": "large",
+            "label": "Large"
+          },
+          {
+            "value": "default",
+            "label": "Default"
+          },
+          {
+            "value": "medium",
+            "label": "Medium"
+          },
+          {
+            "value": "small",
+            "label": "Small"
+          },
+          {
+            "value": "none",
+            "label": "None"
+          }
+        ]
+      },
+      {
+        "type": "select",
+        "id": "bottom_padding",
+        "label": "bottom interval",
+        "default": "default",
+        "options": [
+          {
+            "value": "large",
+            "label": "Large"
+          },
+          {
+            "value": "default",
+            "label": "Default"
+          },
+          {
+            "value": "medium",
+            "label": "Medium"
+          },
+          {
+            "value": "small",
+            "label": "Small"
+          },
+          {
+            "value": "none",
+            "label": "None"
+          }
+        ]
+      },
+      {
+        "type": "header",
+        "content": "Default set"
+      },
  		  {
         "type": "text",
         "id": "title",
@@ -90,7 +158,7 @@
     "presets": [
         {
           "name": "Full screen slider  v2",
-          "category": "Heybike uk v2"
+          "category": "Heybike v2"
         }
       ]
   }
