--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -7,6 +7,9 @@
 [section-name = 'logo-slider'] .flickity-slider .is-selected img{@apply grayscale-0 scale-100}
 [section-name = 'logo-slider'] .flickity-enabled.is-fade .flickity-slider>*{@apply duration-150 ease-linear}
 
+[section-name = 'store-features'] [tag-name = 'features-header'] .h3{@apply text-4_5xl mb-7}
+[section-name = 'store-features'] [tag-name = 'features-header'] p{@apply text-xl px-4}
+
 
 @tailwind base;
 @tailwind components;
@@ -23,6 +26,7 @@
 
 @layer components {
     .btn-featured{@apply font-normal rounded-full bg-gradient-to-b from-[#00bef9] to-[#015fea] border-none  hover:text-white hover:-translate-y-1 hover:opacity-90 hover:scale-95}
+    .btn-contrast{@apply font-normal rounded-full bg-white text-black-900 border-white hover:text-white hover:bg-black-900 hover:border-white }
     .template-index #header:not(.stickyHeader){@apply text-white bg-transparent absolute w-full border-none}
     .template-index #header:not(.stickyHeader) #siteNav>li>a,#header:not(.stickyHeader) .site-header a.hdicon{@apply text-white}
 }
