--- a/assets/custom.css
+++ b/assets/custom.css
@@ -27,6 +27,19 @@
   transition-timing-function:linear;
 }
 
+[section-name = 'store-features'] [tag-name = 'features-header'] .h3{
+  margin-bottom:1.75rem;
+  font-size:2.5rem;
+  line-height:3rem;
+}
+
+[section-name = 'store-features'] [tag-name = 'features-header'] p{
+  padding-left:1rem;
+  padding-right:1rem;
+  font-size:1.25rem;
+  line-height:1.75rem;
+}
+
 :root{
   --ft1:'Product Sans';
   --ft2:'Product Sans';
@@ -188,6 +201,26 @@
   opacity:0.9;
 }
 
+.btn-contrast{
+  border-radius:9999px;
+  --tw-border-opacity:1;
+  border-color:rgb(255 255 255 / var(--tw-border-opacity));
+  --tw-bg-opacity:1;
+  background-color:rgb(255 255 255 / var(--tw-bg-opacity));
+  font-weight:400;
+  --tw-text-opacity:1;
+  color:rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.btn-contrast:hover{
+  --tw-border-opacity:1;
+  border-color:rgb(255 255 255 / var(--tw-border-opacity));
+  --tw-bg-opacity:1;
+  background-color:rgb(0 0 0 / var(--tw-bg-opacity));
+  --tw-text-opacity:1;
+  color:rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .template-index #header:not(.stickyHeader){
   position:absolute;
   width:100%;
@@ -339,12 +372,20 @@
   height:100%;
 }
 
+.max-h-9{
+  max-height:2.25rem;
+}
+
 .w-1\/2{
   width:50%;
 }
 
 .w-1\/5{
   width:20%;
+}
+
+.w-2\/5{
+  width:40%;
 }
 
 .w-3\/5{
@@ -386,6 +427,10 @@
   resize:both;
 }
 
+.flex-col{
+  flex-direction:column;
+}
+
 .flex-wrap{
   flex-wrap:wrap;
 }
@@ -398,8 +443,16 @@
   align-items:center;
 }
 
+.justify-center{
+  justify-content:center;
+}
+
 .justify-between{
   justify-content:space-between;
+}
+
+.overflow-hidden{
+  overflow:hidden;
 }
 
 .truncate{
@@ -489,6 +542,11 @@
   padding-right:3rem;
 }
 
+.px-2{
+  padding-left:0.5rem;
+  padding-right:0.5rem;
+}
+
 .px-4{
   padding-left:1rem;
   padding-right:1rem;
@@ -502,6 +560,11 @@
 .py-1{
   padding-top:0.25rem;
   padding-bottom:0.25rem;
+}
+
+.py-12{
+  padding-top:3rem;
+  padding-bottom:3rem;
 }
 
 .py-20{
@@ -739,6 +802,22 @@
 .after\:content-\[\'\'\]::after{
   --tw-content:'';
   content:var(--tw-content);
+}
+
+@media (min-width: 768px){
+  .md\:px-8{
+    padding-left:2rem;
+    padding-right:2rem;
+  }
+
+  .md\:py-24{
+    padding-top:6rem;
+    padding-bottom:6rem;
+  }
+
+  .md\:pl-6{
+    padding-left:1.5rem;
+  }
 }
 
 @media (min-width: 1024px){
