--- a/sections/image-text.liquid
+++ b/sections/image-text.liquid
@@ -1,35 +1,28 @@
 {%- assign secSt = section.settings -%}
 
-<section section-name="logo-slider" class="{% render 'section-interva-set' , secSt:secSt %}" >
-
+<section section-name="image-text" class="{% render 'section-interva-set' , secSt:secSt %}" >
   <div class="page-width px-4">
-    <div class="rounded-section bg-no-repeat py-20" style="background-image: url({{ secSt.bg_img | image_url:master}});">
-      <div class="w-3/5 mx-auto">
-        <div id="carousel-main-{{section.id}}" 
-          data-flickity='{"pageDots": false, "fade": true, "draggable": false,"prevNextButtons": false}'>
-          {% for block in section.blocks %}
-          <div class="mb-20 text-center text-white">
-            <p class="mb-8 text-3xl font-bold">{{block.settings.text_main}}</p>
-            <p class="text-lg">{{block.settings.text_sub}}</p>
-          </div>
-          {% endfor %}
-        </div>
+
+    <div class="rounded-section flex overflow-hidden" style="background-color:{{secSt.bg_color}};">
+      <div class="w-3/5" >
+        {{ secSt.bg_img | image_url: width: 800 | image_tag: width: nil, loading: 'lazy' }}
       </div>
-      <div data-flickity='{"draggable": false, "asNavFor": "#carousel-main-{{section.id}}", "contain": true, "pageDots": false, "wrapAround": true,"prevNextButtons": false }'>
-        {% for block in section.blocks %}
-        <div class="w-1/5 cursor-pointer text-center">
-          <img class="grayscale transition-all scale-90" src="{{ block.settings.logo_image | image_url: master }}">
+      <div class="w-2/5 flex flex-col justify-center mb-8 text-white md:pl-6">
+        <h1 class="text-4xl">{{ secSt.text_main  }}</h1>
+        <p class="text-xl mb-8">{{ secSt.text_sub  }}</p>
+        <div>
+          <a href="{{ secSt.url }}" class="btn btn-contrast text-base py-1 px-5">{{ secSt.text_btn  }}</a>
         </div>
-        {% endfor %}
       </div>
     </div>
+
   </div>
 </section>  
 
 
 {% schema %}
   {
-    "name": "Logo slider v2",
+    "name": "Image text v2",
     "tag": "section",
     "settings": [
       {
@@ -97,39 +90,42 @@
         "content": "Default set"
       },
  		  {
+        "type": "color",
+        "id": "bg_color",
+        "label": "Background color"
+      },
+ 		  {
         "type": "image_picker",
         "id": "bg_img",
-        "label": "Background image"
-      }
-    ],
-    "blocks":[
-      {
-        "name": "Slide",
-        "type": "slide",
-        "settings": [
-          {
-            "type": "text",
-            "id": "text_main",
-            "label": "Main content",
-            "default":"Grazie a una batteria facilmente estraibile, pneumatici più larghi e luce anteriore integrata."
-          },
-          {
-            "type": "text",
-            "id": "text_sub",
-            "label":"Secondary content",
-            "default":"- Largest moto-comtmunity in Italy"
-          },
-          {
-            "type": "image_picker",
-            "id": "logo_image",
-            "label": "Logo image"
-          }
-        ]
+        "label": "Left image"
+      },
+ 		  {
+        "type": "text",
+        "id": "text_main",
+        "label": "Title",
+        "default":"Find Dealers Near You"
+      },
+ 		  {
+        "type": "text",
+        "id": "text_sub",
+        "label": "Sub title",
+        "default":"Test Ride & Buy Directly"
+      },
+ 		  {
+        "type": "text",
+        "id": "text_btn",
+        "label": "Button text",
+        "default":"Read More"
+      },
+ 		  {
+        "type": "url",
+        "id": "url",
+        "label": "Button link"
       }
     ],
     "presets": [
         {
-          "name": "Logo slider v2",
+          "name": "Image text v2",
           "category": "Heybike v2"
         }
       ]
