--- a/assets/custom.css
+++ b/assets/custom.css
@@ -336,6 +336,22 @@
   margin-top:3.5rem;
 }
 
+.ml-6{
+  margin-left:1.5rem;
+}
+
+.mr-6{
+  margin-right:1.5rem;
+}
+
+.mb-6{
+  margin-bottom:1.5rem;
+}
+
+.mb-2{
+  margin-bottom:0.5rem;
+}
+
 .block{
   display:block;
 }
@@ -402,6 +418,14 @@
 
 .w-full{
   width:100%;
+}
+
+.w-1\/3{
+  width:33.333333%;
+}
+
+.w-2\/3{
+  width:66.666667%;
 }
 
 .-translate-x-1\/2{
@@ -802,6 +826,14 @@
 .after\:content-\[\'\'\]::after{
   --tw-content:'';
   content:var(--tw-content);
+}
+
+.last\:ml-0:last-child{
+  margin-left:0px;
+}
+
+.last\:mr-0:last-child{
+  margin-right:0px;
 }
 
 @media (min-width: 768px){
