--- a/assets/custom.css
+++ b/assets/custom.css
@@ -275,6 +275,19 @@
   z-index:20;
 }
 
+.m-0{
+  margin:0px;
+}
+
+.\!m-0{
+  margin:0px !important;
+}
+
+.mx-3{
+  margin-left:0.75rem;
+  margin-right:0.75rem;
+}
+
 .mx-auto{
   margin-left:auto;
   margin-right:auto;
@@ -300,12 +313,20 @@
   margin-bottom:3.25rem;
 }
 
+.mb-2{
+  margin-bottom:0.5rem;
+}
+
 .mb-20{
   margin-bottom:5rem;
 }
 
 .mb-4{
   margin-bottom:1rem;
+}
+
+.mb-6{
+  margin-bottom:1.5rem;
 }
 
 .mb-7{
@@ -336,20 +357,8 @@
   margin-top:3.5rem;
 }
 
-.ml-6{
-  margin-left:1.5rem;
-}
-
-.mr-6{
-  margin-right:1.5rem;
-}
-
-.mb-6{
-  margin-bottom:1.5rem;
-}
-
-.mb-2{
-  margin-bottom:0.5rem;
+.mt-20{
+  margin-top:5rem;
 }
 
 .block{
@@ -396,8 +405,16 @@
   width:50%;
 }
 
+.w-1\/3{
+  width:33.333333%;
+}
+
 .w-1\/5{
   width:20%;
+}
+
+.w-2\/3{
+  width:66.666667%;
 }
 
 .w-2\/5{
@@ -418,14 +435,6 @@
 
 .w-full{
   width:100%;
-}
-
-.w-1\/3{
-  width:33.333333%;
-}
-
-.w-2\/3{
-  width:66.666667%;
 }
 
 .-translate-x-1\/2{
@@ -457,6 +466,10 @@
 
 .flex-wrap{
   flex-wrap:wrap;
+}
+
+.items-start{
+  align-items:flex-start;
 }
 
 .items-end{
@@ -551,6 +564,14 @@
      object-fit:cover;
 }
 
+.p-0{
+  padding:0px;
+}
+
+.\!p-0{
+  padding:0px !important;
+}
+
 .\!px-7{
   padding-left:1.75rem !important;
   padding-right:1.75rem !important;
@@ -584,11 +605,6 @@
 .py-1{
   padding-top:0.25rem;
   padding-bottom:0.25rem;
-}
-
-.py-12{
-  padding-top:3rem;
-  padding-bottom:3rem;
 }
 
 .py-20{
@@ -828,7 +844,7 @@
   content:var(--tw-content);
 }
 
-.last\:ml-0:last-child{
+.first\:ml-0:first-child{
   margin-left:0px;
 }
 
@@ -840,11 +856,6 @@
   .md\:px-8{
     padding-left:2rem;
     padding-right:2rem;
-  }
-
-  .md\:py-24{
-    padding-top:6rem;
-    padding-bottom:6rem;
   }
 
   .md\:pl-6{
